--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+
+  .font-light {
+    font-family: "Inter", sans-serif;
+    font-weight: 300;
+  }
+  
+  .font-bold {
+    font-family: "Inter", sans-serif;
+    font-weight: 700;
+  }
+
+  
